# pybot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  devbox.json  pyproject.toml  requirements.txt  t
.github/workflows/: build_n_push.yaml
bot/: __init__.py  cache.py  classification.py  classifier.py  embedding.py  feature_extract.py  utils.py
cache/: README.txt
data/: README.txt
tests/: conftest.py  parts.txt  test_bot.py  test_cache.py  test_classification.py  test_classifier.py  test_embedding.py  test_feature_extract.py  test_openai.py  test_palm.py
